Tests working now
